vbnc/vbnc/tests/Errors/30060-11.vb
Class T
    Const M_String As String = 2.0R
End Class